# fleet-management-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ear  pyproject.toml  vercel.json
src/: Dockerfile  pyproject.toml
src/api/: filters.py  mixins.py  schema.py  serializers.py  services.py  urls.py  views.py
src/apps/api/: urls.py
src/apps/cars/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
src/cars/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
src/cars/models/: car.py  (+7 more)
src/common/: filters.py  mixins.py  models.py  serializers.py  views.py
src/configs/: settings.py  urls.py
src/dashboard/: filters.py  serializers.py  services.py  urls.py  views.py
src/data/: AUTO.csv  AUTO_test_column.csv  AUTO_test_row.csv  CHANGE.csv  MENU.csv  MENU_CH_test_row.csv  NORM.csv  PROTECT.csv  STRUC.csv
src/expenses/: models.py  serializers.py  views.py
src/fueling/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
src/history/: admin.py  apps.py  models.py  signals.py
src/maintenance/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
src/parts/: models.py
src/storage/: models.py  serializers.py  urls.py  views.py
src/tires/: models.py
src/vehicle_service/: filters.py  models.py  serializers.py  urls.py  views.py
src/vehicles/: admin.py  apps.py  exceptions.py  filters.py  serializers.py  services.py  urls.py  validators.py  views.py
src/waybills/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
(+51 files in other folders)
